--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<h1>ようこそBookersへ</h1>  <!--アプリケーション２章 -->
+<h1>ようこそBookersへ！</h1>  <!--アプリケーション２章 -->
 <!-- form_with部分-->
 <%= form_with model: Book.new do |f| %>
   <h4>タイトル</h4>
@@ -9,5 +9,5 @@
   
 
   
-  <%= f.submit 'start' %>
+  <%= f.submit 'create book' %>
 <% end %>
