--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ようこそBookersへ！</h1>
+<p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
 
-  <span>
-      <%= link_to "start", "/books/#{list.id}" %>
-  </span>
+<p>印象を共有し交換することができます</p>
+
+<p>
+  <%= link_to "start", books_path %>
+</p>
