--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,6 @@
 <h1>ようこそBookersへ！</h1>  <!--アプリケーション２章 -->
 <!-- form_with部分-->
-<%= form_with model: Book.new do |f| %>
+<%= form_with model: @Book do |f| %>
   <h4>タイトル</h4>
   <%= f.text_field :title %>
   
