--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,45 @@
 <h1>Books</h1>
 
-<% @books.each do |book| %>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-<p>タイトル</p>
-<span><%= book.title %></span>
-  <span>
-    <%= link_to book.title, book_path(list.id) %>
-  </span>
+<table>
+  <thead>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Show" , book %></td>
+      <td><%= link_to "edit" , edit_book_path(book.id) %></td>
+      <td><%= link_to "destroy" , book ,method: :delete %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
 
- <p>本文</p>
- <span><%= book.body %></span>
-  <span>
-    <%= link_to book.body, book_path(list.id) %>
-  </span>
- 
+
+<h1>New book</h1>
+<!-- form_with部分 -->
+<%= form_with model: @book, url: books_path, method: :post do |f| %>
+
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+  
+  <%= f.submit 'Create Book' %>
 <% end %>
