--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,12 @@
 <h1>Books</h1>
 
-<p><%= @book.title %></p>
+<p><%= @books.title %></p>
 
-<p><%= @book.body %></p>
+<p><%= @books.body %></p>
+
+<%= link_to "edit" , edit_book_path(@books) %>
+<%= link_to "back" , books_path %>
+
+<div>
+  <%= flash[:notice] %>
+</div>
