--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>編集画面</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -17,7 +17,7 @@
   <h4>本文</h4>
   <%= f.text_area :body %>
   
-  <%= f.submit 'update book' %>
+  <%= f.submit 'Update Book' %>
   
 <% end %>
 
