--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Books</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -24,7 +24,7 @@
       <td><%= book.body %></td>
       <td><%= link_to "Show" , book %></td>
       <td><%= link_to "edit" , edit_book_path(book.id) %></td>
-      <td><%= link_to "destroy" , book ,method: :delete %></td>
+      <td><%= link_to "Destroy" , book ,method: :delete %></td>
     </tr>
   <% end %>
   </tbody>
